fixed button spacing

--- a/style.css
+++ b/style.css
@@ -225,11 +225,6 @@ footer {
   }
 }
 
-@media only screen and (min-device-width: 360px) {
-  button {
-    bottom: -45px;
-    margin: 15px;
-  }
 
   h1 {
     margin: 0 !important;
